runtime/mm/tea/aggregation/client/src/com/tibco/rta/model/command/ast/SPMCLIParser.java
// $ANTLR 3.4 /home/aditya/Desktop/SPMCLI.g 2012-12-06 14:57:56

package com.tibco.rta.model.command.ast;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SPMCLIParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AGGREGATOR", "ATTRIBUTE", "ATTRIBUTES_BLOCK", "BLOCK", "COMMAND", "COMMIT", "CONNECT", "CREATE", "CUBE", "DATATYPE", "DIMENSION", "EQUALS", "EXPORT", "FOR", "FROM", "HIERARCHY", "IDENTIFIER", "IMPORT", "IN", "JAVAIDDIGIT", "LETTER", "LINK", "LPAREN", "MEASUREMENT", "MODEL_BLOCK", "NEWLINE", "PASSWORD", "PREPOSITION", "PREPOSITIONS", "QUOTES", "REMOVE", "RPAREN", "SCHEMA", "SHOW", "TARGET_BLOCK", "TARGET_OBJECTS", "TO", "USERNAME", "WS"
    };

    public static final int EOF=-1;
    public static final int ADD=4;
    public static final int AGGREGATOR=5;
    public static final int ATTRIBUTE=6;
    public static final int ATTRIBUTES_BLOCK=7;
    public static final int BLOCK=8;
    public static final int COMMAND=9;
    public static final int COMMIT=10;
    public static final int CONNECT=11;
    public static final int CREATE=12;
    public static final int CUBE=13;
    public static final int DATATYPE=14;
    public static final int DIMENSION=15;
    public static final int EQUALS=16;
    public static final int EXPORT=17;
    public static final int FOR=18;
    public static final int FROM=19;
    public static final int HIERARCHY=20;
    public static final int IDENTIFIER=21;
    public static final int IMPORT=22;
    public static final int IN=23;
    public static final int JAVAIDDIGIT=24;
    public static final int LETTER=25;
    public static final int LINK=26;
    public static final int LPAREN=27;
    public static final int MEASUREMENT=28;
    public static final int MODEL_BLOCK=29;
    public static final int NEWLINE=30;
    public static final int PASSWORD=31;
    public static final int PREPOSITION=32;
    public static final int PREPOSITIONS=33;
    public static final int QUOTES=34;
    public static final int REMOVE=35;
    public static final int RPAREN=36;
    public static final int SCHEMA=37;
    public static final int SHOW=38;
    public static final int TARGET_BLOCK=39;
    public static final int TARGET_OBJECTS=40;
    public static final int TO=41;
    public static final int USERNAME=42;
    public static final int WS=43;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SPMCLIParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SPMCLIParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SPMCLIParser.tokenNames; }
    public String getGrammarFileName() { return "/home/aditya/Desktop/SPMCLI.g"; }


    public static class attribute_values_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "attribute_values"
    // /home/aditya/Desktop/SPMCLI.g:57:1: attribute_values : IDENTIFIER ;
    public final SPMCLIParser.attribute_values_return attribute_values() throws RecognitionException {
        SPMCLIParser.attribute_values_return retval = new SPMCLIParser.attribute_values_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENTIFIER1=null;

        CommonTree IDENTIFIER1_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:58:5: ( IDENTIFIER )
            // /home/aditya/Desktop/SPMCLI.g:58:9: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();


            IDENTIFIER1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_attribute_values375); 
            IDENTIFIER1_tree = 
            (CommonTree)adaptor.create(IDENTIFIER1)
            ;
            adaptor.addChild(root_0, IDENTIFIER1_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "attribute_values"


    public static class model_attribute_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "model_attribute"
    // /home/aditya/Desktop/SPMCLI.g:102:1: model_attribute : ( DATATYPE | AGGREGATOR );
    public final SPMCLIParser.model_attribute_return model_attribute() throws RecognitionException {
        SPMCLIParser.model_attribute_return retval = new SPMCLIParser.model_attribute_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set2=null;

        CommonTree set2_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:103:5: ( DATATYPE | AGGREGATOR )
            // /home/aditya/Desktop/SPMCLI.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set2=(Token)input.LT(1);

            if ( input.LA(1)==AGGREGATOR||input.LA(1)==DATATYPE ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set2)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "model_attribute"


    public static class verb_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "verb"
    // /home/aditya/Desktop/SPMCLI.g:106:1: verb : ( CREATE | ADD | REMOVE | CONNECT | SHOW | LINK | IMPORT | EXPORT | COMMIT );
    public final SPMCLIParser.verb_return verb() throws RecognitionException {
        SPMCLIParser.verb_return retval = new SPMCLIParser.verb_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set3=null;

        CommonTree set3_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:107:5: ( CREATE | ADD | REMOVE | CONNECT | SHOW | LINK | IMPORT | EXPORT | COMMIT )
            // /home/aditya/Desktop/SPMCLI.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set3=(Token)input.LT(1);

            if ( input.LA(1)==ADD||(input.LA(1) >= COMMIT && input.LA(1) <= CREATE)||input.LA(1)==EXPORT||input.LA(1)==IMPORT||input.LA(1)==LINK||input.LA(1)==REMOVE||input.LA(1)==SHOW ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set3)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "verb"


    public static class model_object_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "model_object"
    // /home/aditya/Desktop/SPMCLI.g:118:1: model_object : ( SCHEMA | CUBE | MEASUREMENT | ATTRIBUTE | DIMENSION | HIERARCHY | AGGREGATOR );
    public final SPMCLIParser.model_object_return model_object() throws RecognitionException {
        SPMCLIParser.model_object_return retval = new SPMCLIParser.model_object_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set4=null;

        CommonTree set4_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:119:5: ( SCHEMA | CUBE | MEASUREMENT | ATTRIBUTE | DIMENSION | HIERARCHY | AGGREGATOR )
            // /home/aditya/Desktop/SPMCLI.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set4=(Token)input.LT(1);

            if ( (input.LA(1) >= AGGREGATOR && input.LA(1) <= ATTRIBUTE)||input.LA(1)==CUBE||input.LA(1)==DIMENSION||input.LA(1)==HIERARCHY||input.LA(1)==MEASUREMENT||input.LA(1)==SCHEMA ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set4)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "model_object"


    public static class creds_object_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "creds_object"
    // /home/aditya/Desktop/SPMCLI.g:128:1: creds_object : ( USERNAME | PASSWORD );
    public final SPMCLIParser.creds_object_return creds_object() throws RecognitionException {
        SPMCLIParser.creds_object_return retval = new SPMCLIParser.creds_object_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set5=null;

        CommonTree set5_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:129:5: ( USERNAME | PASSWORD )
            // /home/aditya/Desktop/SPMCLI.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set5=(Token)input.LT(1);

            if ( input.LA(1)==PASSWORD||input.LA(1)==USERNAME ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set5)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "creds_object"


    public static class preposition_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "preposition"
    // /home/aditya/Desktop/SPMCLI.g:133:1: preposition : ( FROM | IN | TO | FOR );
    public final SPMCLIParser.preposition_return preposition() throws RecognitionException {
        SPMCLIParser.preposition_return retval = new SPMCLIParser.preposition_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set6=null;

        CommonTree set6_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:134:5: ( FROM | IN | TO | FOR )
            // /home/aditya/Desktop/SPMCLI.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set6=(Token)input.LT(1);

            if ( (input.LA(1) >= FOR && input.LA(1) <= FROM)||input.LA(1)==IN||input.LA(1)==TO ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set6)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "preposition"


    public static class target_object_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "target_object"
    // /home/aditya/Desktop/SPMCLI.g:140:1: target_object : model_object ;
    public final SPMCLIParser.target_object_return target_object() throws RecognitionException {
        SPMCLIParser.target_object_return retval = new SPMCLIParser.target_object_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SPMCLIParser.model_object_return model_object7 =null;



        try {
            // /home/aditya/Desktop/SPMCLI.g:141:5: ( model_object )
            // /home/aditya/Desktop/SPMCLI.g:141:10: model_object
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_model_object_in_target_object1143);
            model_object7=model_object();

            state._fsp--;

            adaptor.addChild(root_0, model_object7.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "target_object"


    public static class verb_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "verb_expr"
    // /home/aditya/Desktop/SPMCLI.g:153:1: verb_expr : ( WS )? verb ( WS )? ;
    public final SPMCLIParser.verb_expr_return verb_expr() throws RecognitionException {
        SPMCLIParser.verb_expr_return retval = new SPMCLIParser.verb_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WS8=null;
        Token WS10=null;
        SPMCLIParser.verb_return verb9 =null;


        CommonTree WS8_tree=null;
        CommonTree WS10_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:154:5: ( ( WS )? verb ( WS )? )
            // /home/aditya/Desktop/SPMCLI.g:154:10: ( WS )? verb ( WS )?
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/aditya/Desktop/SPMCLI.g:154:10: ( WS )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==WS) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:154:10: WS
                    {
                    WS8=(Token)match(input,WS,FOLLOW_WS_in_verb_expr1222); 
                    WS8_tree = 
                    (CommonTree)adaptor.create(WS8)
                    ;
                    adaptor.addChild(root_0, WS8_tree);


                    }
                    break;

            }


            pushFollow(FOLLOW_verb_in_verb_expr1225);
            verb9=verb();

            state._fsp--;

            adaptor.addChild(root_0, verb9.getTree());

            // /home/aditya/Desktop/SPMCLI.g:154:19: ( WS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:154:19: WS
                    {
                    WS10=(Token)match(input,WS,FOLLOW_WS_in_verb_expr1227); 
                    WS10_tree = 
                    (CommonTree)adaptor.create(WS10)
                    ;
                    adaptor.addChild(root_0, WS10_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "verb_expr"


    public static class target_object_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "target_object_expr"
    // /home/aditya/Desktop/SPMCLI.g:157:1: target_object_expr : ( WS )? target_object ( WS )? ;
    public final SPMCLIParser.target_object_expr_return target_object_expr() throws RecognitionException {
        SPMCLIParser.target_object_expr_return retval = new SPMCLIParser.target_object_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WS11=null;
        Token WS13=null;
        SPMCLIParser.target_object_return target_object12 =null;


        CommonTree WS11_tree=null;
        CommonTree WS13_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:158:5: ( ( WS )? target_object ( WS )? )
            // /home/aditya/Desktop/SPMCLI.g:158:10: ( WS )? target_object ( WS )?
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/aditya/Desktop/SPMCLI.g:158:10: ( WS )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==WS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:158:10: WS
                    {
                    WS11=(Token)match(input,WS,FOLLOW_WS_in_target_object_expr1255); 
                    WS11_tree = 
                    (CommonTree)adaptor.create(WS11)
                    ;
                    adaptor.addChild(root_0, WS11_tree);


                    }
                    break;

            }


            pushFollow(FOLLOW_target_object_in_target_object_expr1258);
            target_object12=target_object();

            state._fsp--;

            adaptor.addChild(root_0, target_object12.getTree());

            // /home/aditya/Desktop/SPMCLI.g:158:28: ( WS )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==WS) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:158:28: WS
                    {
                    WS13=(Token)match(input,WS,FOLLOW_WS_in_target_object_expr1260); 
                    WS13_tree = 
                    (CommonTree)adaptor.create(WS13)
                    ;
                    adaptor.addChild(root_0, WS13_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "target_object_expr"


    public static class identifier_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "identifier_expr"
    // /home/aditya/Desktop/SPMCLI.g:161:1: identifier_expr : ( WS )? IDENTIFIER ( WS )? ;
    public final SPMCLIParser.identifier_expr_return identifier_expr() throws RecognitionException {
        SPMCLIParser.identifier_expr_return retval = new SPMCLIParser.identifier_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WS14=null;
        Token IDENTIFIER15=null;
        Token WS16=null;

        CommonTree WS14_tree=null;
        CommonTree IDENTIFIER15_tree=null;
        CommonTree WS16_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:162:5: ( ( WS )? IDENTIFIER ( WS )? )
            // /home/aditya/Desktop/SPMCLI.g:162:10: ( WS )? IDENTIFIER ( WS )?
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/aditya/Desktop/SPMCLI.g:162:10: ( WS )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==WS) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:162:10: WS
                    {
                    WS14=(Token)match(input,WS,FOLLOW_WS_in_identifier_expr1287); 
                    WS14_tree = 
                    (CommonTree)adaptor.create(WS14)
                    ;
                    adaptor.addChild(root_0, WS14_tree);


                    }
                    break;

            }


            IDENTIFIER15=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifier_expr1290); 
            IDENTIFIER15_tree = 
            (CommonTree)adaptor.create(IDENTIFIER15)
            ;
            adaptor.addChild(root_0, IDENTIFIER15_tree);


            // /home/aditya/Desktop/SPMCLI.g:162:25: ( WS )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==WS) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:162:25: WS
                    {
                    WS16=(Token)match(input,WS,FOLLOW_WS_in_identifier_expr1292); 
                    WS16_tree = 
                    (CommonTree)adaptor.create(WS16)
                    ;
                    adaptor.addChild(root_0, WS16_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "identifier_expr"


    public static class datatype_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "datatype_expr"
    // /home/aditya/Desktop/SPMCLI.g:165:1: datatype_expr : ( WS )? IDENTIFIER ( WS )? ;
    public final SPMCLIParser.datatype_expr_return datatype_expr() throws RecognitionException {
        SPMCLIParser.datatype_expr_return retval = new SPMCLIParser.datatype_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WS17=null;
        Token IDENTIFIER18=null;
        Token WS19=null;

        CommonTree WS17_tree=null;
        CommonTree IDENTIFIER18_tree=null;
        CommonTree WS19_tree=null;

        try {
            // /home/aditya/Desktop/SPMCLI.g:166:5: ( ( WS )? IDENTIFIER ( WS )? )
            // /home/aditya/Desktop/SPMCLI.g:166:10: ( WS )? IDENTIFIER ( WS )?
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/aditya/Desktop/SPMCLI.g:166:10: ( WS )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==WS) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:166:10: WS
                    {
                    WS17=(Token)match(input,WS,FOLLOW_WS_in_datatype_expr1319); 
                    WS17_tree = 
                    (CommonTree)adaptor.create(WS17)
                    ;
                    adaptor.addChild(root_0, WS17_tree);


                    }
                    break;

            }


            IDENTIFIER18=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_datatype_expr1322); 
            IDENTIFIER18_tree = 
            (CommonTree)adaptor.create(IDENTIFIER18)
            ;
            adaptor.addChild(root_0, IDENTIFIER18_tree);


            // /home/aditya/Desktop/SPMCLI.g:166:25: ( WS )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==WS) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /home/aditya/Desktop/SPMCLI.g:166:25: WS
                    {
                    WS19=(Token)match(input,WS,FOLLOW_WS_in_datatype_expr1324); 
                    WS19_tree = 
                    (CommonTree)adaptor.create(WS19)
                    ;
                    adaptor.addChild(root_0, WS19_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "datatype_expr"


    public static class attribute_expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "attribute_expr"
    // /home/aditya/Desktop/SPMCLI.g:172:1: attribute_expr : ( WS )* model_attribute ( WS )* EQUALS ( WS )* QUOTES ( WS )* attribute_values ( WS )* QUOTES ( WS )* -> ^( model_attribute ^( IDENTIFIER attribute_values ) ) ;
    public final SPMCLIParser.attribute_expr_return attribute_expr() throws RecognitionException {
        SPMCLIParser.attribute_expr_return retval = new SPMCLIParser.attribute_expr_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token WS20=null;
        Token WS22=null;
        Token EQUALS23=null;
        Token WS24=null;
        Token QUOTES25=null;
        Token WS26=null;
        Token WS28=null;
        Token QUOTES29=null;
        Token WS30=null;
        SPMCLIParser.model_attribute_return model_attribute21 =null;

        SPMCLIParser.attribute_values_return attribute_values27 =null;

